<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/signupbackground1">

    <TextView
        android:id="@+id/textView12log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:text="SignUp"
        android:textColor="@color/white"
        android:textSize="35dp" />








    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_username_edt"
        android:hint="Username"
        android:background="#30ffffff"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_face_26"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailthe1st"
        android:hint="Email"
        android:background="#30ffffff"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_email_27"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_password_edt"
        android:hint="Password"
        android:background="#30ffffff"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_lock_28"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_confirm_edt"
        android:hint="Confirm Password"
        android:background="#30ffffff"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_lock_28"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="165dp"
            android:layout_height="70dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="#F1BE48"
            android:text="Login"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/signup_signup_btn"
            android:layout_width="165dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="#F1BE48"
            android:text="Signup"
            android:textColor="#ffffff"
            android:textSize="20sp" />


    </LinearLayout>




</androidx.appcompat.widget.LinearLayoutCompat>