...
    android:layout_height="match_parent"
    android:background="#F1BE48"
    tools:context=".LoginInputActivity">


    <TextView
        android:id="@+id/LogInTitleView"
        android:layout_width="274dp"
        android:layout_height="104dp"
        android:fontFamily="@font/alegreya_sc_bold_italic"
        android:text=" CyRoam             LogIn"
        android:textAlignment="center"
        android:textColor="#C8102E"
...
